# llm-behavioral-bias

./: .gitignore  CLAUDE.md  PREREGISTRATION.md  README.md  pyproject.toml
analysis/: spot_check.ipynb
data/raw/claude-opus-4-6/: Q13_0.jsonl  Q13_A.jsonl  Q13_B.jsonl  Q13_C.jsonl  Q1_0.jsonl  Q1_A.jsonl  Q1_B.jsonl  Q1_C.jsonl  Q4_0.jsonl  Q4_A.jsonl  Q4_B.jsonl  Q4_C.jsonl  Q5_0.jsonl  Q5_A.jsonl  Q5_B.jsonl  Q5_C.jsonl
scripts/: run_main.py  run_pilot.py
src/: api_client.py  batch_runner.py  config.py  parser.py
stimuli/: Q13_0.json  Q13_A.json  Q13_B.json  Q13_C.json  Q1_0.json  Q1_A.json  Q1_B.json  Q1_C.json  Q4_0.json  Q4_A.json  Q4_B.json  Q4_C.json  Q5_0.json  Q5_A.json  Q5_B.json  Q5_C.json
